# idrac_fancontrol

./: CMakeLists.txt  README.md  sample_systemd.service
.github/workflows/: deb.yml
common/: conf.h  exec.cpp  exec.h  graph.cpp  graph.h  server.cpp  server.h  watch.cpp  watch.h
fan_control/: CMakeLists.txt  control.cpp  control.h  main.cpp
temp_monitor/: CMakeLists.txt  client.cpp  client.h  graph.cpp  graph.h  main.cpp  main.h  watch.cpp  watch.h
